# swarmy_mopping_robot

./: .gitignore
Swarmy_Bot_URDF/: CMakeLists.txt  package.xml
Swarmy_Bot_URDF/config/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  ekf.yaml  global_costmap_params.yaml  gmapping.yaml  joint_names_Swarmy_Bot_URDF.yaml  local_costmap_params.yaml
Swarmy_Bot_URDF/launch/: display.launch  gazebo.launch  navigation.launch  navigation_with_bringup.launch  robot_state.launch  slam_test.launch  swarmy_bringup.launch  swarmy_industrial_bringup.launch  swarmy_nav_core_bringup.launch
Swarmy_Bot_URDF/meshes/: base_link.STL  fc_link.STL  fcw_link.STL  lw_link.STL  rcw_link.STL  rw_link.STL
Swarmy_Bot_URDF/rviz/: swarmy.rviz  swarmy_nav2.rviz
Swarmy_Bot_URDF/urdf/: Swarmy_Bot_URDF.csv  Swarmy_Bot_URDF.urdf  Swarmy_Bot_URDF.urdf.bak
swarmy_cmd_vel/: CMakeLists.txt  package.xml
swarmy_cmd_vel/scripts/: cmd_vel_listener.py  swarmy_base_node.py
swarmy_description/: CMakeLists.txt  package.xml
swarmy_description/launch/: display.launch  robot_state.launch
swarmy_description/urdf/: swarmy_robot.urdf
swarmy_display/: CMakeLists.txt  package.xml
swarmy_display/arduino/esp32_oled_emotions/: esp32_oled_emotions.ino
swarmy_display/launch/: emotion_display.launch
swarmy_display/scripts/: emotion_state_node.py  emotion_test_pub.py  jetson_oled_emotion.py  swarmy_oled_emotions.py
swarmy_navigation/: CMakeLists.txt  package.xml
swarmy_navigation/config/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
swarmy_navigation/launch/: navigation.launch  navigation_with_bringup.launch
swarmy_navigation/maps/: hostel_room_map.pgm  hostel_room_map.yaml  lab_505.pgm  lab_505.yaml
ydlidar_ros_driver/launch/: G2.launch
